
CR = Change Request item
Local-only = Changes not reflected in Source Code
Backend Maintenance = Change is not user facing

## [2016-03-19] [Since 2016-03-12 Integration]
### Changed:
- Update wording of 'divisions sharing' news items to 'divisions showing'
- Update labeling of Internal Medicine tag field

## [2016-03-12] [Since 2016-03-05 Integration]
### Changed:
- Review queue email now says if there were no changes
- History now indicates no changes on unchanged review items
- If a user clicks the 'no changes' button when editing, we only save the pre-edit data
- 'Contact Us' on login page & navbar dropdown now goes to Provincial primary contacts
- Ensure nobody enters duplicate specialist attendances
- #347: Break down bulk import in email by division
- On Specialist and Clinic pages, "Last Visited" shown next to each controlling user that has visited the profile
- Specialist and Clinic history now shows "Last visited" by controlling users

### Fixed:
- Notifications

## [2016-03-05] [Since 2016-02-27 Integration]
### Added:
- Dropdowns from 'View Pathways As' notification bar
- Show when controlling users 'last visited' owned specialist or clinic

### Changed:
- Small improvements to the wording of notification emails.
- Database backups once again mirrored to S3

### Fixed:
- #212: Categorization options show up on specialist form even if they don't have any specialties
- #352: Notification emails now correctly hide all updates by division.

## [2016-02-27] [Since 2016-02-20 Integration]
### Added:
- #334: Increase number of specialist offices to four
- #338: Add Pathways User guide to the navbar under "You"
- New specialist and clinic offices are now automatically 'public' unless otherwise specified
- #295: Limit area of practice filters shown to local referral area for Family Practice only
- #282: Red Flags and Pearls now show under Physician Resources in navbar search
- #314: Add Community Services and Red Flags to Entity Page Views